# Sokoke

./: .gitignore  CMakeLists.txt  CMakePresets.json  IDEAS.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: windows-compile.yml
Editor/: CMakeLists.txt  Main.cpp
Editor/Panels/: Hierarchy.cpp  Panels.hpp
Engine/: CMakeLists.txt
Engine/Backends/: CMakeLists.txt
Engine/Backends/SDL/: CMakeLists.txt  Events.cpp  Events.hpp  ISDLEventSink.hpp  SDL.cpp  SDL.hpp  Window.cpp  Window.hpp
Engine/Backends/SDL/src/: Window.cpp
Engine/Backends/SDL_GPU/: CMakeLists.txt  SDL_GPU.cpp  SDL_GPU.hpp
Engine/Core/: CMakeLists.txt  IBackend.hpp  Log.cpp  Log.hpp  PlatformEvents.hpp  Sokoke.cpp  Sokoke.hpp  Style.hpp  Types.hpp  Window.hpp
Engine/Core/Backend/: IGPUBackend.hpp
Engine/Core/Components/: Mesh.hpp  MeshRenderer.hpp  Name.hpp  Relationship.hpp  Transform.hpp
Engine/Core/Entities/: Entity.hpp  Scene.hpp
Engine/Core/Messaging/: CommandQueue.hpp  EventPump.hpp  Signal.hpp
Engine/Core/Systems/Renderer/: Renderer.cpp  Renderer.hpp
Engine/Core/include/Sokoke/Core/: Sokoke.hpp  Types.hpp
Engine/Core/src/: Sokoke.cpp
Runtime/: TODO.md
Samples/Testbed/: CMakeLists.txt  Main.cpp
notes/: broadcasts.md
